1998-11-10  Alain Magloire

	* src/vms_fab.{c,h}: New file for VMS wildcard expansion
	Written by Phillip C. Brisco.

	* vms/make.com : add line to compile vms_fab.c and 
	{e,f,}grepmat.c with link for each grep/fgrep/egrep.
	Base on patch send by Phillib C. Brisco.

1998-11-09  Alain Magloire

	* grep-2.2c on alpha for testing.

1998-11-09  Paul Eggert

	* src/grep.1: Fix `Last Change' of output by generating the date
	from the RCS Id.

	* src/grep.c (is_EISDIR): New macro.
	(grep): If -s, suppress errors from trying to read directories.
	(grepfile): Use is_EISDIR to simplify code.
	(grepdir): If -s, suppress errors from trying to read directories.

	* src/grep.1: Fix -q -r -s problems; describe BSD grep better.

	* src/grep.c (main): Update copyright.

	Specify default matcher with default_matcher extern var, not
	DEFAULT_MATCHER macro.  This is more straightforward and means
	we need to compile grep.c just once.

	* src/egrepmat.c, src/fgrepmat.c, src/grepmat.c: New files.

	* src/Makefile.am (base_sources): New macro.
	(egrep_SOURCES, fgrep_SOURCES, grep_SOURCES): Now consist of
	$(base_sources) plus the single tailoring file.
	(grep_LDADD, egrep_LDADD, fgrep_LDADD): Remove.
	(EXTRA_DIST): Remove grep.c, regex.c.
	(fgrep.o, egrep.o): Remove.

	* src/grep.h (matcher): Now char const *.
	(default_matcher): New decl.

	* src/grep.c (matcher): Now char const *.
	(setmatcher): Now accepts char const *.
	(main): Default the matcher from default_matcher (linked externally)
	rather than DEFAULT_MATCHER (a macro).

1998-11-08 Alain Magloire

	* src/grep.1: `prep.ai.mit.edu' should be replaced with `gnu.org'.
	Nit from Paul Eggert.

1998-11-06 Alain Magloire

	* src/grep.c: The Matcher is not set to argv[0] but
	explicitly by a #define MATCHER at compile time default is "grep".

	* aclocal/: NEW dir. provides our own *.m4

	* configure.in: Move Paul's Large Files to AC_LFS.(aclocal/lfs.m4)
	Taken from Jim Meyering fileutils.

1998-11-05 Alain Magloire
